# ChangeLog for net-libs/dslib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/dslib/ChangeLog,v 1.5 2011/12/12 14:19:55 scarabeus Exp $

*dslib-1.7-r2 (12 Dec 2011)

  12 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org> -dslib-1.7-r1.ebuild,
  +dslib-1.7-r2.ebuild:
  Revision bump again to use bundled suds, they altered them :(

*dslib-1.7-r1 (06 Dec 2011)

  06 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org> -dslib-1.7.ebuild,
  +dslib-1.7-r1.ebuild:
  Revision bump to unbundle suds and pyasn1.

*dslib-1.7 (05 Dec 2011)

  05 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org> -dslib-1.6.ebuild,
  +dslib-1.7.ebuild:
  Version bump to latest dslib.

  11 Nov 2011; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Drop me from maint.

*dslib-1.6 (05 Oct 2011)

  05 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org> +dslib-1.6.ebuild,
  +metadata.xml:
  Initial commit, probably usefull for czech people only.
