@@ -2,23 +2,23 @@
 Hash: SHA1
 
 DIST dslib-1.7.tar.gz 176336 RMD160 c4b603488228a30f38586c2946215b229e230ff0 SHA1 01e50c647bbca6a259a2f926b25863b99e3c8548 SHA256 49565ab2a68d447b1f904e63b71248e18613b34adc2f73d11f0b2ad941a60081
-EBUILD dslib-1.7-r2.ebuild 891 RMD160 445278aab7de7ddd09f3d5f30ba987baa52ff569 SHA1 d8cdd76d2990de58c2368353f8f010614273f4f2 SHA256 d96fff16003fbda4362b946dae1423e28a9741fa583114f5de1f103ba4652ca0
-MISC ChangeLog 994 RMD160 7a96cc914e63382de899ddc18e72fd20fa0d0234 SHA1 94a80d0414d65d7f05bdc44f513200ed7be1a847 SHA256 dc261cd9109997cb417b207a9457d38f76664a6d209110c52c860b2b7ef1871b
+EBUILD dslib-1.7-r2.ebuild 889 RMD160 496642c2e0fcb686cb096618922f90a99ff60392 SHA1 0422715d20818191076054bde2ac3be9678972bf SHA256 3211dbd03e8c3bfdd9a7e56c4951fc7060c0458570439bc720c15f170b46c74e
+MISC ChangeLog 1102 RMD160 2b65c66e75c23911b4801b7769e16503cf69833c SHA1 018ecddff38078f5335fb5014d2689031c2dc764 SHA256 e46c7cea864b15532c46ddf0bfaf11f202c39de56006157fce0ddb31c4a657f3
 MISC metadata.xml 438 RMD160 fd140dfc6023d58f21d49d3a2eab21287073d3db SHA1 29ab4c7580f37ffa38c48572c24e330ad2f29467 SHA256 a0e820a726134f7db2fc1c5958e6f3020d489be2f8e2d39874cf472ce905ff01
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJO5g3kAAoJEOSiRoyO7jvoLQcP/Rg6fQ96RFFiFYU+Nv5oIB2y
-FLG9wYP0GKrxfE+Gm/uPlHyRxtkHiGRiM8aGeaELM3koEZE9w8YtxcLvmaYIQTcG
-x23aitBv10pd9KiLm2pPhE+YOJdRJgJDbxSZ+YaWFWfQEgamvloj1umQF9ukG4Bt
-aH/zhYlkLw52/uLDV0iwlPE99UGFjfbydpW5JGYy5VWQ171bhC/zS1gPTo5ak/Yf
-r6P9mkuDXUKzGRrHmlAd3RZ7pASJEjvLVLbEMVQKbdYmmTv1po0QaaXLSur06l1H
-DcuyqiqHxVQTHGswghBMpFm1VcXEpGZuzevREUqW5P9BdupDAC0qNiUCNcaVCLgZ
-Sz8ZURZvmaM+SgWigu6Hq39uRY/rZCGHZoxxnu44CyhnYzaUMGmZ0ThcH2nRT6DB
-xqRNYmFBSxre6p7zmEKTDhi++uBSx3R1dw7EcqDjriJL41llafvJIWSmLcBUqp0K
-EENJGQ8uUY45saple32WJEiTSsZc/1csYXW9gPl1VVvs4UOM5N1NbF3YEQQCdWCK
-FafTlc6XPg2WpeZEXDFWNorrOu1bt1iirw59fu/Kf9LYPqqFHB/2uTx2yZ45RABt
-27hjMm92wyK+rQNoO3nc80kbk3fIY66mUHvceFte6yqzeF8Wwfi4WotCOFBi49qF
-Hql3i0eN3fB2+IQuZEtw
-=I1ko
+iQIcBAEBAgAGBQJPPhtOAAoJEOSiRoyO7jvoxSoQAIOTp9PKlBljA2l9uBwFFfeQ
+WuDazRXYt7/JOcZ3yKejBO1JxsULXp8ctYN2Aeb37rUXQTBNIbb6wJ+/FST0Wcry
+/z0HeUUYqEYrl7QAiC/E+233Zb8SD+XTBMpfLzDwt/GMBvkY4ELMVD3MDI6SCp0r
+C+BGoBySRGVlcQii9s5J2rM3qHaMtS5+DCQwMij7juOWTzE5uOQRaFjSGbNdnMZp
+3ZVDR52UUUKlfUWJzxfpSwO9zlwA1vneZG44vmzJC/GAPPMIKk43vyd++IojXQ1X
+ygVs+KIMnvYG5HZ+1cD1sFHgojNbPklkJNr8PXH2pGfsU0VKY5+e9UzvHtkwNaSt
+P7hlE9t0cZjw3jN07rFlLIvmLrUERn8GH54AdqtjV+k2i6nQbbFZFpJnREj24n3N
+hm36tL86JPiIaONDi3xqqnqiMDiTa9Z7DhMDCwyXiWcDTNGTOYY824bTxVT8/D17
+k9qgKf+Tf0K1Zi/NSgZ6Q+XANfKKKL1AecZTBCzCNzgQmuHvzLiao3f3s7LiMgB/
+I/qGZkbhc7QtJEJ0Z/7ERz95xl0AZ7tP2eSisbtuEJMr9Uk5+rnDhm0Efm32HbgE
+oy17mkijWU98V7+e9GJkyJfatiw8g8lYq0+5frJ8NfVEhNc8YCFb0jfVdDO4OQjh
+gyldvTU2pRuO74uNJFuw
+=Xra8
 -----END PGP SIGNATURE-----
