@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/dslib/dslib-1.7-r2.ebuild,v 1.1 2011/12/12 14:19:55 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/dslib/dslib-1.7-r2.ebuild,v 1.2 2012/02/17 09:17:13 scarabeus Exp $
 
 EAPI=4
 
@@ -14,7 +14,7 @@ SRC_URI="http://labs.nic.cz/files/labs/datove_schranky/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 # BUNDLED!: dev-python/suds
